Bug 907682 - HTML:option group position is not correct when select is collapsed, r=tbsaunde